--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,35 @@
 alembic==0.9.9
+argon2-cffi==18.3.0
+asn1crypto==0.24.0
+Babel==2.6.0
+bcrypt==3.1.4
 blinker==1.4
-certifi==2018.8.13
+certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
-click==6.7
+Click==7.0
+cryptography==2.3.1
+cryptography-vectors==2.3.1
 Flask==1.0.2
+Flask-Admin==1.5.1
+Flask-Babel==0.12.2
+Flask-BabelEx==0.9.3
 Flask-Dance==0.14.0
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-OAuth==0.12
 Flask-OAuthlib==0.9.4
+Flask-Principal==0.4.0
+Flask-Script==2.0.6
+Flask-Security==3.0.0 
 Flask-SQLAlchemy==2.3.2
+Flask-Table==0.5.0
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 httplib2==0.11.3
-idna==2.6
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 lazy==1.3
@@ -21,12 +37,16 @@ Mako==1.0.7
 MarkupSafe==1.0
 oauth2==1.9.0.post1
 oauthlib==2.0.7
+passlib==1.7.1
 psycopg2==2.7.5
+pycparser==2.19
 python-dateutil==2.7.2
 python-editor==1.0.3
+pytz==2018.5
 requests==2.18.4
 requests-oauthlib==0.8.0
 six==1.11.0
+speaklater==1.3
 SQLAlchemy==1.2.6
 SQLAlchemy-Utils==0.33.2
 urllib3==1.22
